manifests/deepspeed-2.2.4.tgz-manifest.yaml
---
# Source: deepspeed/templates/client/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-deepspeed-client
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: deepspeed
    app.kubernetes.io/version: 0.14.2
    helm.sh/chart: deepspeed-2.2.4
    app.kubernetes.io/part-of: deepspeed
    app.kubernetes.io/component: client
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: deepspeed
      app.kubernetes.io/part-of: deepspeed
      app.kubernetes.io/component: client
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # By default, the client is not setting any port
---
# Source: deepspeed/templates/worker/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-deepspeed-worker
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: deepspeed
    app.kubernetes.io/version: 0.14.2
    helm.sh/chart: deepspeed-2.2.4
    app.kubernetes.io/part-of: deepspeed
    app.kubernetes.io/component: worker
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: deepspeed
      app.kubernetes.io/part-of: deepspeed
      app.kubernetes.io/component: worker
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    # Allow complete connection from other worker pods (we cannot predict the ports the application creates)
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: my-release
              app.kubernetes.io/name: deepspeed
              app.kubernetes.io/part-of: deepspeed
              app.kubernetes.io/component: worker 
    - ports:
        - port: 2222
      from:
---
# Source: deepspeed/templates/worker/worker-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-deepspeed-worker-headless
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: deepspeed
    app.kubernetes.io/version: 0.14.2
    helm.sh/chart: deepspeed-2.2.4
    app.kubernetes.io/part-of: deepspeed
    app.kubernetes.io/component: worker
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: deepspeed
    app.kubernetes.io/part-of: deepspeed
    app.kubernetes.io/component: worker
---
# Source: deepspeed/templates/client/client-dep-job.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-deepspeed-client
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: deepspeed
    app.kubernetes.io/version: 0.14.2
    helm.sh/chart: deepspeed-2.2.4
    app.kubernetes.io/part-of: deepspeed
    app.kubernetes.io/component: client
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: deepspeed
      app.kubernetes.io/part-of: deepspeed
      app.kubernetes.io/component: client
  strategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/hostfile: d655080c5e763e3334b02912e6ca265aefd87b6b24917ac57d727abbbc72ecfc
        checksum/ssh-private-key: de1507611597dc15b6faebecf03200aa2d11d5d8ccda6c53b327b084cd89d9de
        checksum/ssh-client-conf: e3312d20b0e75fb53cb468343c24974d25c61f8767070f92c6e298d8326c4746
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: deepspeed
        app.kubernetes.io/version: 0.14.2
        helm.sh/chart: deepspeed-2.2.4
        app.kubernetes.io/part-of: deepspeed
        app.kubernetes.io/component: client
    spec:
      
      serviceAccountName: my-release-deepspeed-client
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: deepspeed
                    app.kubernetes.io/component: client
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: deepspeed
          image: docker.io/bitnami/deepspeed:0.14.2-debian-12-r6
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - bash
          args:
            - -ec
            - |
              #!/bin/bash
              [[ -f "/opt/bitnami/scripts/deepspeed/entrypoint.sh" ]] && source "/opt/bitnami/scripts/deepspeed/entrypoint.sh"
              sleep infinity
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 1024Mi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 20
            exec:
              command:
                - deepspeed
                - --help
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
            exec:
              command:
                - python
                - -c
                - import deepspeed; deepspeed.__version__
          volumeMounts:
            - name: source
              mountPath: /app
            - name: empty-dir
              mountPath: /etc/ssh/ssh_config
              subPath: ssh-conf-dir/ssh_config
            - name: ssh-client-config
              mountPath: /etc/ssh/ssh_config.d
            - name: hostfile
              mountPath: /job
            - name: empty-dir
              mountPath: /home/deepspeed/.local
              subPath: app-local-dir
            - name: empty-dir
              mountPath: /home/deepspeed/.ssh
              subPath: app-ssh-dir
            - name: ssh-client-private-key
              mountPath: /bitnami/ssh/client-private-key
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /home/deepspeed/.cache
              subPath: app-cache-dir
            - name: data
              mountPath: /bitnami/deepspeed/data
      volumes:
        - name: empty-dir
          emptyDir: {}
        # SSH client settings for connecting to the worker nodes
        - name: ssh-client-config
          configMap:
            name: my-release-deepspeed-ssh-client
        - name: ssh-client-private-key
          secret:
            secretName: my-release-deepspeed-ssh-key
        # Source code of the application
        - name: source
          emptyDir: {}
        # hostfile for connecting to the worker nodes
        - name: hostfile
          configMap:
            name: my-release-deepspeed-hosts
        # These folders are necessary for building and pip install operations
        # Optional data folder in case the application requires storing data
        - name: data
          emptyDir: {}
        # Temporary folders: /tmp and .ssh
---
# Source: deepspeed/templates/worker/worker-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-deepspeed-worker
  namespace: "default"
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: deepspeed
    app.kubernetes.io/version: 0.14.2
    helm.sh/chart: deepspeed-2.2.4
    app.kubernetes.io/part-of: deepspeed
    app.kubernetes.io/component: worker
spec:
  replicas: 3
  podManagementPolicy: "Parallel"
  serviceName: my-release-deepspeed-worker-headless
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: deepspeed
      app.kubernetes.io/part-of: deepspeed
      app.kubernetes.io/component: worker
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/ssh-private-key: 6a2016482c2bc66887af88ffba152695abeb34c082cfd13adbe763ddce0d07a2
        checksum/ssh-server-conf: 9c2da4e02131071dfe3c9e06d46c03478cae9e5256f11a99151a3a4b73df6a84
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: deepspeed
        app.kubernetes.io/version: 0.14.2
        helm.sh/chart: deepspeed-2.2.4
        app.kubernetes.io/part-of: deepspeed
        app.kubernetes.io/component: worker
    spec:
      serviceAccountName: my-release-deepspeed-worker
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/name: deepspeed
                    app.kubernetes.io/component: worker
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: deepspeed
          image: docker.io/bitnami/deepspeed:0.14.2-debian-12-r6
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          command:
            - bash
          args:
            - -ec
            - |
              #!/bin/bash
              [[ -f "/opt/bitnami/scripts/deepspeed/entrypoint.sh" ]] && source "/opt/bitnami/scripts/deepspeed/entrypoint.sh"
              ## sshd requires the absolute path
              SSHD_PATH="$(command -v sshd)"
              exec "$SSHD_PATH" -D -h "/bitnami/ssh/server-private-key/ssh_host_rsa_key" -e
          ports:
            - name: tcp-ssh
              containerPort: 2222
              protocol: TCP
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 1024Mi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - pgrep
                - -f
                - sshd
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            tcpSocket:
              port: tcp-ssh
          volumeMounts:
            - name: ssh-server-config
              mountPath: /etc/ssh/sshd_config.d
            - name: empty-dir
              mountPath: /etc/ssh/sshd_config
              subPath: sshd-conf-dir/sshd_config
            # As we are disabling host key verification from the client, we can
            # auto-generate the worker private key
            - name: empty-dir
              mountPath: /bitnami/ssh/server-private-key
              subPath: app-worker-private-key-dir
            # We need to use /home because of the permission
            # limitations of sshd
            - name: empty-dir
              mountPath: /home
              subPath: home-dir
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /run
              subPath: run-dir
            - name: empty-dir
              mountPath: /home/deepspeed/.cache
              subPath: app-cache-dir
            - name: empty-dir
              mountPath: /home/deepspeed/.local
              subPath: app-local-dir
            - name: source
              mountPath: /app
      volumes:
        - name: empty-dir
          emptyDir: {}
        # Depending on the application, the source needs to be in the worker host
        - name: source
          emptyDir: {}
        # We need the client private key for generating the public key and updating the authorized_keys file
        - name: ssh-client-private-key
          secret:
            secretName: my-release-deepspeed-ssh-key
        # SSH Server configuration
        - name: ssh-server-config
          configMap:
            name: my-release-deepspeed-ssh-server
        - name: data
          emptyDir: {}
